# esp32

./: AGENTS.md
auto_watering/: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
auto_watering/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  auto_watering.h  auto_watering_main.c  board_config.c  moisture_sensor.c  moisture_sensor.h  pump_control.c  pump_driver.c  pump_driver.h  soil_sensors.c  watering_logic.c  zigbee_resources.c
auto_watering/main/include/: board_config.h  pump_control.h  soil_sensors.h  watering_logic.h  zigbee_resources.h
blink/: CMakeLists.txt
ha_on_off_light/HA_on_off_light/: CMakeLists.txt
